# bigdata

./: stat-logger.rar
AAAAA/: .classpath  .project  build.properties  pom.xml
AAAAA/.svn/: all-wcprops  entries
MyPython/: hello.py
Servers/Tomcat v7.0 Server at localhost-config/: server.xml
data-center/: .project
data-center/server/tags/stat-writer-20130830/src/libant/: CMakeLists.txt
data-center/server/tags/stat-writer-20130830/src/libant/inet/: inet_utils.hpp
data-center/server/tags/stat-writer-20130830/src/libant/time/: timeval.hpp
doc/: 交接文档—lynn—2016年3月.docx  数据分析平台原型设计-By lynn.rp
doc/.svn/: wc.db
doc/database/: basic.sql  db.20140423.sql  db.20140625.sql  db.20140818.sql  db.20150403.sql  t_web_email_template(20150401).sql
doc/web-display/: 游戏玩家.docx  账号系统页面数据说明.xlsx
doc/web-页面交互文档/: 日报数据.doc
doc/【产品】设计/: 【数据分析平台】统计项—支持的字符.xlsx
doc/【产品】重要内容备忘录/: 【tongji平台】停算数据清单.xlsx
doc/【其它】/: kpi.txt
doc/【后台】系统功能相关/: 广告数据处理业务说明文档.docx  新统计数据库查找数据和处理数据.docx  首服滚服逻辑.docx
doc/内网配置/: 内网Hadoop2.5.2HA配置.docx
flumeDemo/: .classpath  .project  pom.xml
getRedis/: .classpath  .project  follower_20190714
helloSSM/: .project
ipTrans/: .classpath  .project
ipdb/: .project
myDemo_2/: .classpath  .project
myDemo_3/: .classpath  .project
myDemo_4/: .project
myDemo_5/: .classpath  .project
myWordCount/: .classpath  .project
stat-client/: .project  set-keep-alive.sh  stat-client.sh
stat-logger/: .project  statlogger.cpp
stat-server/: .project
test/: pom.xml  statlogger.h
tms-server-parent/: .classpath  .project  pom.xml
(+3959 files in other folders)
